<resources>
    <string name="app_name">AXForAsset</string>
    <string name="unameHint">Username</string>
    <string name="passHint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_hint">Login</string>
    <string name="profile_menu">Profile</string>
    <string name="home_menu">Home</string>
    <string name="item_menu">Item</string>
    <string name="logout_menu">Logout</string>
    <string name="tnc_tab">Terms &amp; Conditions</string>
    <string name="terms">The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves.</string>
    <string name="conditions">We reserve the right to request that you remove all links or any particular link to our Website. You approve to immediately remove all links to our Website upon request. We also reserve the right to amen these terms and conditions and it’s linking policy at any time. By continuously linking to our Website, you agree to be bound to and follow these linking terms and conditions.</string>

    <string name="item_img">Item image</string>
    <string name="item_title">Cozy Farm</string>
    <string name="item_desc">Planning to start a Project where you can take care of cute Animals, build a Cozy Town and harvest your own Produce? </string>
    <string name="item_btn">Purchase</string>
    <string name="item_detail">Detail</string>

    <string-array name="payments">
        <item>Visa</item>
        <item>Master</item>
        <item>Paypal</item>
    </string-array>
    
    <string name="work">Bina Nusanatara GameDevelopment</string>
    <string name="location">Purple Avenue no.28</string>
    <string name="mobile">089657819022</string>

</resources>