<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/itemImg"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/item_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_title"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/itemDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_desc"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/itemBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_btn"
            android:layout_gravity="end"/>

    </LinearLayout>

</LinearLayout>