<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.ItemDetailActivity"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/itemImg"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:contentDescription="@string/item_img" />

    <Space
        android:layout_width="0dp"
        android:layout_height="80dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <Space
        android:layout_width="0dp"
        android:layout_height="20dp" />

    <Spinner
        android:id="@+id/paymentSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="0dp"
        android:layout_height="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_btn"
        android:layout_gravity="end"/>

</LinearLayout>