<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.ProfileActivity"
    android:paddingHorizontal="40dp"
    android:paddingVertical="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/primary_rounded_corner">

        <TextView
            android:id="@+id/unameTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unameHint"
            android:textColor="@color/colPrimaryContent"
            android:textSize="22sp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"
                android:contentDescription="@string/unameHint" />
            <Space
                android:layout_width="20dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/emailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unameHint"
                android:textColor="@color/colPrimaryContent"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_work"
                android:contentDescription="@string/unameHint" />
            <Space
                android:layout_width="20dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/workTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work"
                android:textColor="@color/colPrimaryContent"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location"
                android:contentDescription="@string/unameHint" />
            <Space
                android:layout_width="20dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/locationTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/colPrimaryContent"/>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"
                android:contentDescription="@string/unameHint" />
            <Space
                android:layout_width="20dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/mobileTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:textColor="@color/colPrimaryContent"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>